--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="slider-card">
                     <div class="card-content">
                         <div class="card">
-                            <img src="/public/Vector8.png" class="card-img" />
+                            <img src="public/Vector8.png" class="card-img" />
                             <div class="card-body text-center my-5">
                                 <h5 class="card-title my-4 list-unstyled1">Setting Investment Goals</h5>
                                 <p class="card-text list-unstyled mt-2">
@@ -140,7 +140,7 @@
                 <div class="slider-card">
                     <div class="card-content">
                         <div class="card">
-                            <img src="/public/Vector8.png" class="card-img" />
+                            <img src="public/Vector8.png" class="card-img" />
                             <div class="card-body text-center my-5">
                                 <h5 class="card-title my-4 list-unstyled1">Setting Investment Goals</h5>
                                 <p class="card-text list-unstyled mt-2">
@@ -153,7 +153,7 @@
                 <div class="slider-card">
                     <div class="card-content">
                         <div class="card">
-                            <img src="/public/Vector8.png" class="card-img" />
+                            <img src="public/Vector8.png" class="card-img" />
                             <div class="card-body text-center my-5">
                                 <h5 class="card-title my-4 list-unstyled1">Setting Investment Goals</h5>
                                 <p class="card-text list-unstyled mt-2">
@@ -166,7 +166,7 @@
                 <div class="slider-card">
                     <div class="card-content">
                         <div class="card">
-                            <img src="/public/Vector8.png" class="card-img" />
+                            <img src="public/Vector8.png" class="card-img" />
                             <div class="card-body text-center my-5">
                                 <h5 class="card-title my-4 list-unstyled1">Setting Investment Goals</h5>
                                 <p class="card-text list-unstyled mt-2">
@@ -197,7 +197,7 @@
       <div class="row equal-height">
         <div class="col-lg-6 col-md-4">
           <div class="image-container card2">
-            <img src="/public/coins-growth-profit-concept-business-investment 2.png" class="img-fluid" alt="Image 1" />
+            <img src="public/coins-growth-profit-concept-business-investment 2.png" class="img-fluid" alt="Image 1" />
             <div class="overlay1">
               <P class="list-unstyled fw-bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur sint qui, cum neque nihil velit praesentium tempore aliquam odio repudiandae voluptas.</P>  
               <button class="btn btn-warning list-unstyled">Learn More</button>
@@ -207,7 +207,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="image-container card2">
             <img
-              src="/public/close-up-coins-table 2.png"
+              src="public/close-up-coins-table 2.png"
               class="img-fluid"
               alt="Image 2"
             />
@@ -220,7 +220,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="image-container card2">
             <img
-              src="/public/finance-economics-work-male-discussion-laptop 3.png"
+              src="public/finance-economics-work-male-discussion-laptop 3.png"
               class="img-fluid"
               alt="Image 3"
             />
@@ -236,7 +236,7 @@
         <div class="col-lg-4 col-md-3">
             <div class="image-container card2">
                 <img
-                src="/public/finance-accounting-concept-business-woman-holding-coin-desk 1.png"
+                src="public/finance-accounting-concept-business-woman-holding-coin-desk 1.png"
                 class="img-fluid"
                 alt="Image 4"
               />
@@ -251,7 +251,7 @@
                 <div class="col-md-12">
                     <div class="image-container card2">
                         <img
-                        src="/public/close-up-young-man-s-hand-white-shirt-wooden-block-cube-nps 1.png"
+                        src="public/close-up-young-man-s-hand-white-shirt-wooden-block-cube-nps 1.png"
                         class="img-fluid"
                         alt="Image 5"
                       />
@@ -264,7 +264,7 @@
                 <div class="col-md-12">
                     <div class="image-container card2">
                         <img
-                            src="/public/insurance-policy-agreement-terms-document-concept 1.png"
+                            src="public/insurance-policy-agreement-terms-document-concept 1.png"
                             class="img-fluid"
                             alt="Image 6"
                             />
@@ -279,7 +279,7 @@
         <div class="col-lg-4 col-md-3">
             <div class="image-container card2">
                 <img
-                src="/public/woman-hand-puts-golden-ingot-dollar-banknote-favorable-investment-interest-deposit-financial-income 1.png"
+                src="public/woman-hand-puts-golden-ingot-dollar-banknote-favorable-investment-interest-deposit-financial-income 1.png"
                 class="img-fluid"
                 alt="Image 7"
               />
@@ -376,7 +376,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="/public/testimonial-portrait-beautiful-businesswoman-standing-with-her-arms-crossed-person 1.png"
+              src="public/testimonial-portrait-beautiful-businesswoman-standing-with-her-arms-crossed-person 1.png"
               class="d-block w-100"
               alt="..."
             />
@@ -389,7 +389,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="/public/testimonial-portrait-beautiful-businesswoman-standing-with-her-arms-crossed-person 1.png"
+              src="public/testimonial-portrait-beautiful-businesswoman-standing-with-her-arms-crossed-person 1.png"
               class="d-block w-100"
               alt="..."
             />
@@ -402,7 +402,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="/public/testimonial-portrait-beautiful-businesswoman-standing-with-her-arms-crossed-person 1.png"
+              src="public/testimonial-portrait-beautiful-businesswoman-standing-with-her-arms-crossed-person 1.png"
               class="d-block w-100"
               alt="..."
             />
@@ -431,7 +431,7 @@
         <div class="col-md-4">
           <div class="card2">
             <img
-              src="/public/finance-economics-work-male-discussion-laptop 3.png"
+              src="public/finance-economics-work-male-discussion-laptop 3.png"
               class="card-img-top"
               height="274px"
             />
@@ -446,7 +446,7 @@
         <div class="col-md-4">
           <div class="card2">
             <img
-            src="/public/finance-economics-work-male-discussion-laptop 3.png"
+            src="public/finance-economics-work-male-discussion-laptop 3.png"
             class="card-img-top"
             height="274px"
             />
@@ -461,7 +461,7 @@
         <div class="col-md-4">
           <div class="card2">
             <img
-            src="/public/finance-economics-work-male-discussion-laptop 3.png"
+            src="public/finance-economics-work-male-discussion-laptop 3.png"
             class="card-img-top"
             height="274px"
             />    
@@ -517,7 +517,7 @@
             </div>
             <div class="col-lg-6 d-flex justify-content-end">
                 <img
-                src="/public/Group 77.png"
+                src="public/Group 77.png"
                 alt="..."
               />
             </div>
